--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         android:icon="@mipmap/earth"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".base.BaseApplication">
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="kEuAEvnGwqMzegSHAsiOeliv0QSiKGmY" />
@@ -40,6 +41,11 @@
         <activity android:name=".ui.sampleinfo.HtmlCommentActivity"/>
         <activity android:name=".ui.sampleinfo.SamplePicSelectActivity"/>
         <activity android:name=".ui.myinfo.MyInfoActivity"/>
+        <activity android:name=".ui.myinfo.SettingActivity"/>
+        <activity android:name=".ui.function.FunctionActivity"/>
+        <activity android:name=".ui.function.EnvironVariableActivity"/>
+        <activity android:name=".ui.function.FuzzyMembershipActivity"/>
+        <activity android:name=".ui.function.FCMActivity"/>
     </application>
 
 </manifest>
