--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
-        versionName "2.0"
+        versionName "2.0.0"
     }
     buildTypes {
         release {
@@ -36,4 +36,5 @@ dependencies {
     compile files('libs/dom4j-1.6.1.jar')
     compile files('libs/BaiduNaviSDK_3.1.1.jar')
     compile files('libs/httpmime-4.1.2.jar')
+    compile 'im.fir:fir-sdk:latest.integration@aar'
 }
