--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,8 @@
         <activity android:name=".ui.sampleinfo.AlterSampleInfoActivity"/>
         <activity android:name=".ui.sampleinfo.AlterParamsFCMActivity"/>
         <activity android:name=".ui.main.BNDemoGuideActivity"/>
+        <activity android:name=".ui.favorite.FavoriteActivity"/>
+        <!-- 土壤剖面拍照分层 -->
         <activity android:name="com.soil.profile.ui.SoilProfileActivity"/>
         <activity android:name="com.soil.profile.ui.ActivityAttributeHome"/>
         <activity android:name="com.soil.profile.ui.ActivityAttributeProperties"/>
