--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,7 @@
         <activity android:name=".ui.main.BNDemoGuideActivity"/>
         <activity android:name=".ui.favorite.FavoriteActivity"/>
         <activity android:name=".ui.myinfo.OfflineMapActivity"/>
+        <activity android:name=".ui.myinfo.BaseMapDemo"/>
         <!-- 土壤剖面拍照分层 -->
         <activity android:name="com.soil.profile.ui.SoilProfileActivity"/>
         <activity android:name="com.soil.profile.ui.ActivityAttributeHome"/>
