添加文件上传功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.soil.soilsample"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 7
-        versionName "2.2.2"
+        versionCode 9
+        versionName "2.2.4"
     }
     buildTypes {
         release {
@@ -40,4 +40,5 @@ dependencies {
     compile 'im.fir:fir-sdk:latest.integration@aar'
     compile 'org.apache.httpcomponents:httpcore:4.4.1'
     compile 'org.apache.httpcomponents:httpclient:4.5'
+    compile 'com.zhy:okhttputils:2.6.2'
 }
